# leish-domains

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  auxiliary_functions_tk.py  bi_biopython_functions_tk.py  bioservices_functions_tk-copy.py  bioservices_functions_tk.py  entrez-1.py  iprscan_soappy.py  iprscan_soappy2.py  iprscan_urllib2.py  main.py  pyproject.toml  python-leishdomains-v3.py  requirements.txt  run_bioblast_tk.py  run_biopython_tk.py  setup.py  summary_enrich_tk.py  summary_functions_tk.py  summary_plot_tk.py  test-api.py  test-bs_uniprot.py  test-info.py  test-medline.py  tk_tax_id_v155.py  xmltramp.py
.github/workflows/: ci.yml
analysis/: __init__.py  excel_export.py  plotting.py  statistics.py
cli/: __init__.py  main.py
config/: default.yaml
core/: __init__.py  config.py  exceptions.py  logger.py  session.py  validators.py
data/: __init__.py  file_ops.py  filtering.py  merging.py
docs/: conf.py  index.rst  installation.rst
examples/: sample_data.txt  usage_examples.py
output/: A4HUD2_1_bs_uniprot.txt  tax5671_92_bs_uniprot.txt
tests/: __init__.py  test_analysis_excel.py  test_analysis_plotting.py  test_analysis_statistics.py  test_cli.py  test_core.py  test_data_filtering.py  test_data_merging.py
